.provarCaches/00D5f000005vwGkEAI/objects/rstk__syprinter__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_syprinter</customHelpPage>
    <description>syprinter__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__syprinter_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__syprinter_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syprinter_desc__c</fullName>
        <label>Printer Description / Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syprinter_email__c</fullName>
        <label>Printer Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__syprinter_name__c</fullName>
        <label>Printer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Print by Email Printer</label>
    <nameField>
        <label>Print by Email Printer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Print by Email Printer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Printer_name_cannot_be_modified</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNEW() &amp;&amp;  ISCHANGED(rstk__syprinter_name__c)</errorConditionFormula>
        <errorMessage>Printer Name cannot be modified</errorMessage>
    </validationRules>
</CustomObject>